# C-general-purpose-dict

./: .gitignore  CMakeLists.txt  README.md  crc32.h  dict.c  dict.h  test.c
tests/: basic-test.c
tools/: random-strings.py  run-tests.py
